# Fiber

./: LICENSE  README.md  prompt.txt  pyproject.toml  setup.py
fiber/: __init__.py  __main__.py  cli.py  session.py  system_context.py
fiber/prompts/brainstorm/: brainstorm_utils.py
fiber/prompts/chat/: chat_utils.py
fiber/prompts/compare/: compare_utils.py
fiber/prompts/define/: define_utils.py
fiber/prompts/search/: search_utils.py
prompts/creator/: __init__.py  creator.py  prompt.txt
prompts/summarizer/: prompt.txt  summarizer.py
prompts/time/: __init__.py  time_utils.py
prompts/weather/: __init__.py  weather.py
web/: package-lock.json  package.json  server.js
web/public/: index.html  script.js  style.css
